--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,13 +37,22 @@ dist.jlink.output=${dist.jlink.dir}/ExpoEscritorio
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.1.1.jar=C:\\Users\\gyaci\\Downloads\\flatlaf-3.1.1.jar
+file.reference.flatlaf-3.1.1.jar-1=librerias\\flatlaf-3.1.1.jar
 file.reference.flatlaf-extras-3.1.1.jar=C:\\Users\\gyaci\\Downloads\\flatlaf-extras-3.1.1.jar
+file.reference.flatlaf-extras-3.1.1.jar-1=librerias\\flatlaf-extras-3.1.1.jar
+file.reference.gson-2.8.2.jar=C:\\Users\\50379\\Desktop\\gson-2.8.2.jar
 file.reference.lombok.jar=C:\\Users\\gyaci\\Downloads\\lombok.jar
+file.reference.lombok.jar-1=librerias\\lombok.jar
 file.reference.miglayout-4.0.jar=D:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO\\librerias\\miglayout-4.0.jar
+file.reference.miglayout-4.0.jar-1=librerias\\miglayout-4.0.jar
 file.reference.org.json.jar=C:\\Users\\gyaci\\Downloads\\org.json.jar
+file.reference.org.json.jar-1=librerias\\org.json.jar
 file.reference.svgSalamander-1.1.4.jar=C:\\Users\\gyaci\\Downloads\\svgSalamander-1.1.4.jar
+file.reference.svgSalamander-1.1.4.jar-1=librerias\\svgSalamander-1.1.4.jar
 file.reference.swing-toast-notifications-1.0.0.jar=C:\\Users\\gyaci\\Downloads\\swing-toast-notifications-1.0.0.jar
+file.reference.swing-toast-notifications-1.0.0.jar-1=librerias\\swing-toast-notifications-1.0.0.jar
 file.reference.TimingFramework-0.55.jar=C:\\Users\\gyaci\\Downloads\\TimingFramework-0.55.jar
+file.reference.TimingFramework-0.55.jar-1=librerias\\TimingFramework-0.55.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -57,7 +66,16 @@ javac.classpath=\
     ${file.reference.swing-toast-notifications-1.0.0.jar}:\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.miglayout-4.0.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.flatlaf-3.1.1.jar-1}:\
+    ${file.reference.flatlaf-extras-3.1.1.jar-1}:\
+    ${file.reference.lombok.jar-1}:\
+    ${file.reference.miglayout-4.0.jar-1}:\
+    ${file.reference.org.json.jar-1}:\
+    ${file.reference.svgSalamander-1.1.4.jar-1}:\
+    ${file.reference.swing-toast-notifications-1.0.0.jar-1}:\
+    ${file.reference.TimingFramework-0.55.jar-1}:\
+    ${file.reference.gson-2.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -114,7 +132,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=Oracle_OpenJDK_8.0.342_7
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
