--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,6 +42,7 @@ file.reference.flatlaf-extras-3.1.1.jar=C:\\Users\\gyaci\\Downloads\\flatlaf-ext
 file.reference.flatlaf-extras-3.1.1.jar-1=librerias\\flatlaf-extras-3.1.1.jar
 file.reference.gson-2.8.2.jar=C:\\Users\\50379\\Desktop\\gson-2.8.2.jar
 file.reference.gson-2.8.2.jar-1=librerias\\gson-2.8.2.jar
+file.reference.javax.mail.jar=librerias\\javax.mail.jar
 file.reference.lombok.jar=C:\\Users\\gyaci\\Downloads\\lombok.jar
 file.reference.lombok.jar-1=librerias\\lombok.jar
 file.reference.miglayout-4.0.jar=D:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO\\librerias\\miglayout-4.0.jar
@@ -77,7 +78,8 @@ javac.classpath=\
     ${file.reference.swing-toast-notifications-1.0.0.jar-1}:\
     ${file.reference.TimingFramework-0.55.jar-1}:\
     ${file.reference.gson-2.8.2.jar}:\
-    ${file.reference.gson-2.8.2.jar-1}
+    ${file.reference.gson-2.8.2.jar-1}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
