--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,6 +50,7 @@ file.reference.miglayout-4.0.jar-1=librerias\\miglayout-4.0.jar
 file.reference.org.json.jar=C:\\Users\\gyaci\\Downloads\\org.json.jar
 file.reference.org.json.jar-1=librerias\\org.json.jar
 file.reference.qrgen-1.2.jar=C:\\Users\\w0lf3\\Downloads\\qrgen-1.2.jar\\qrgen-1.2.jar
+file.reference.qrgen-1.2.jar-1=C:\\Users\\gyaci\\Desktop\\qrgen-1.2.jar
 file.reference.svgSalamander-1.1.4.jar=C:\\Users\\gyaci\\Downloads\\svgSalamander-1.1.4.jar
 file.reference.svgSalamander-1.1.4.jar-1=librerias\\svgSalamander-1.1.4.jar
 file.reference.swing-toast-notifications-1.0.0.jar=C:\\Users\\gyaci\\Downloads\\swing-toast-notifications-1.0.0.jar
@@ -87,7 +88,8 @@ javac.classpath=\
     ${file.reference.twilio-10.0.0-rc.1.jar}:\
     ${file.reference.zxing-core-2.0.jar}:\
     ${file.reference.zxing-1.7-javase.jar}:\
-    ${file.reference.qrgen-1.2.jar}
+    ${file.reference.qrgen-1.2.jar}:\
+    ${file.reference.qrgen-1.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
