--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -56,6 +56,8 @@ file.reference.swing-toast-notifications-1.0.0.jar=C:\\Users\\gyaci\\Downloads\\
 file.reference.swing-toast-notifications-1.0.0.jar-1=librerias\\swing-toast-notifications-1.0.0.jar
 file.reference.TimingFramework-0.55.jar=C:\\Users\\gyaci\\Downloads\\TimingFramework-0.55.jar
 file.reference.TimingFramework-0.55.jar-1=librerias\\TimingFramework-0.55.jar
+file.reference.zxing-1.7-javase.jar=C:\\Users\\w0lf3\\Downloads\\zxing-1.7-javase.jar
+file.reference.zxing-core-2.0.jar=C:\\Users\\w0lf3\\Downloads\\zxing-core-2.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -81,7 +83,9 @@ javac.classpath=\
     ${file.reference.gson-2.8.2.jar}:\
     ${file.reference.gson-2.8.2.jar-1}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.qrgen-1.2.jar}
+    ${file.reference.qrgen-1.2.jar}:\
+    ${file.reference.zxing-1.7-javase.jar}:\
+    ${file.reference.zxing-core-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
