--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ExpoEscritorio
 endorsed.classpath=
 excludes=
+file.reference.anima-0.1.1.jar=C:\\Users\\50379\\Desktop\\anima-0.1.1.jar
 file.reference.flatlaf-3.1.1.jar=C:\\Users\\gyaci\\Downloads\\flatlaf-3.1.1.jar
 file.reference.flatlaf-3.1.1.jar-1=librerias\\flatlaf-3.1.1.jar
 file.reference.flatlaf-extras-3.1.1.jar=C:\\Users\\gyaci\\Downloads\\flatlaf-extras-3.1.1.jar
@@ -43,8 +44,11 @@ file.reference.flatlaf-extras-3.1.1.jar-1=librerias\\flatlaf-extras-3.1.1.jar
 file.reference.gson-2.8.2.jar=C:\\Users\\50379\\Desktop\\gson-2.8.2.jar
 file.reference.gson-2.8.2.jar-1=librerias\\gson-2.8.2.jar
 file.reference.javax.mail.jar=librerias\\javax.mail.jar
+file.reference.jgoodies-binding-2.7.0-sources.jar=C:\\Users\\50379\\Desktop\\jgoodies-binding-2.7.0-sources.jar
+file.reference.jgoodies-looks-2.2.1.jar=C:\\Users\\50379\\Desktop\\jgoodies-looks-2.2.1.jar
 file.reference.lombok.jar=C:\\Users\\gyaci\\Downloads\\lombok.jar
 file.reference.lombok.jar-1=librerias\\lombok.jar
+file.reference.material-ui-swing-1.1.4.jar=C:\\Users\\50379\\Desktop\\material-ui-swing-1.1.4.jar
 file.reference.miglayout-4.0.jar=D:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO\\librerias\\miglayout-4.0.jar
 file.reference.miglayout-4.0.jar-1=librerias\\miglayout-4.0.jar
 file.reference.org.json.jar=C:\\Users\\gyaci\\Downloads\\org.json.jar
@@ -56,6 +60,7 @@ file.reference.swing-toast-notifications-1.0.0.jar=C:\\Users\\gyaci\\Downloads\\
 file.reference.swing-toast-notifications-1.0.0.jar-1=librerias\\swing-toast-notifications-1.0.0.jar
 file.reference.TimingFramework-0.55.jar=C:\\Users\\gyaci\\Downloads\\TimingFramework-0.55.jar
 file.reference.TimingFramework-0.55.jar-1=librerias\\TimingFramework-0.55.jar
+file.reference.weblaf-ui-1.2.10.jar=C:\\Users\\50379\\Desktop\\weblaf-ui-1.2.10.jar
 file.reference.zxing-1.7-javase.jar=C:\\Users\\w0lf3\\Downloads\\zxing-1.7-javase.jar
 file.reference.zxing-core-2.0.jar=C:\\Users\\w0lf3\\Downloads\\zxing-core-2.0.jar
 includes=**
@@ -85,7 +90,12 @@ javac.classpath=\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.qrgen-1.2.jar}:\
     ${file.reference.zxing-1.7-javase.jar}:\
-    ${file.reference.zxing-core-2.0.jar}
+    ${file.reference.zxing-core-2.0.jar}:\
+    ${file.reference.jgoodies-binding-2.7.0-sources.jar}:\
+    ${file.reference.weblaf-ui-1.2.10.jar}:\
+    ${file.reference.jgoodies-looks-2.2.1.jar}:\
+    ${file.reference.material-ui-swing-1.1.4.jar}:\
+    ${file.reference.anima-0.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
