Se añadió el diseño de la pantalla de inicio del dashboard, se cambiaron los diseños de las notificaciones y se corrigieron los apartados del dashboard

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -57,7 +57,7 @@ file.reference.qrgen-1.2.jar=C:\\Users\\w0lf3\\Downloads\\qrgen-1.2.jar\\qrgen-1
 file.reference.svgSalamander-1.1.4.jar=C:\\Users\\gyaci\\Downloads\\svgSalamander-1.1.4.jar
 file.reference.svgSalamander-1.1.4.jar-1=librerias\\svgSalamander-1.1.4.jar
 file.reference.swing-toast-notifications-1.0.0.jar=C:\\Users\\gyaci\\Downloads\\swing-toast-notifications-1.0.0.jar
-file.reference.swing-toast-notifications-1.0.0.jar-1=librerias\\swing-toast-notifications-1.0.0.jar
+file.reference.swing-toast-notifications-1.0.1.jar=librerias\\swing-toast-notifications-1.0.1.jar
 file.reference.TimingFramework-0.55.jar=C:\\Users\\gyaci\\Downloads\\TimingFramework-0.55.jar
 file.reference.TimingFramework-0.55.jar-1=librerias\\TimingFramework-0.55.jar
 file.reference.weblaf-ui-1.2.10.jar=C:\\Users\\50379\\Desktop\\weblaf-ui-1.2.10.jar
@@ -83,7 +83,6 @@ javac.classpath=\
     ${file.reference.miglayout-4.0.jar-1}:\
     ${file.reference.org.json.jar-1}:\
     ${file.reference.svgSalamander-1.1.4.jar-1}:\
-    ${file.reference.swing-toast-notifications-1.0.0.jar-1}:\
     ${file.reference.TimingFramework-0.55.jar-1}:\
     ${file.reference.gson-2.8.2.jar}:\
     ${file.reference.gson-2.8.2.jar-1}:\
@@ -95,7 +94,8 @@ javac.classpath=\
     ${file.reference.weblaf-ui-1.2.10.jar}:\
     ${file.reference.jgoodies-looks-2.2.1.jar}:\
     ${file.reference.material-ui-swing-1.1.4.jar}:\
-    ${file.reference.anima-0.1.1.jar}
+    ${file.reference.anima-0.1.1.jar}:\
+    ${file.reference.swing-toast-notifications-1.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
