--- a/src/View/theme/FlatLaf.properties
+++ b/src/View/theme/FlatLaf.properties
@@ -23,3 +23,12 @@ ScrollBar.thumbArc=999
 Popup.dropShadowInsets = 2,5,8,8
 
 Toast.background=lighten(@background,5%)
+
+Toast.outlineWidth = 1
+Toast.warning.outlineColor = $App.accent.orange
+Toast.frameInsets = 20,20,20,20
+Toast.arc = 30
+Toast.shadowOpacity = 0f
+Toast.useEffect = true
+Toast.effectAlignment = right
+Toast.margin = 10,10,10,10
