--- a/src/View/theme/FlatDarkLaf.properties
+++ b/src/View/theme/FlatDarkLaf.properties
@@ -18,10 +18,7 @@ Menu.ScrollBar.thumb=lighten($Menu.background,10%)
 
 Login.background=lighten(@background,5%)
 
-Toast.success.outlineColor=#1b5e20
-Toast.info.outlineColor=#01579b
-Toast.warning.outlineColor=#e65100
-Toast.error.outlineColor=#c62828
+Toast.useEffect = false
 
 # Accent Color
 App.accent.default = #4B6EAF
