--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,28 +37,41 @@ dist.jlink.output=${dist.jlink.dir}/ExpoEscritorio
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=Librerias para reportes\\AbsoluteLayout.jar
+file.reference.AbsoluteLayout.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\AbsoluteLayout.jar
 file.reference.anima-0.1.1.jar=C:\\Users\\50379\\Desktop\\anima-0.1.1.jar
 file.reference.commons-beanutils-1.9.4.jar=Librerias para reportes\\commons-beanutils-1.9.4.jar
+file.reference.commons-beanutils-1.9.4.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\commons-beanutils-1.9.4.jar
 file.reference.commons-codec-1.10.jar=Librerias para reportes\\commons-codec-1.10.jar
+file.reference.commons-codec-1.10.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\commons-codec-1.10.jar
 file.reference.commons-collections4-4.1.jar=Librerias para reportes\\commons-collections4-4.1.jar
+file.reference.commons-collections4-4.1.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\commons-collections4-4.1.jar
 file.reference.commons-digester-2.1.jar=Librerias para reportes\\commons-digester-2.1.jar
+file.reference.commons-digester-2.1.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\commons-digester-2.1.jar
 file.reference.commons-logging-1.2.jar=Librerias para reportes\\commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\commons-logging-1.2.jar
 file.reference.flatlaf-3.1.1.jar=C:\\Users\\gyaci\\Downloads\\flatlaf-3.1.1.jar
 file.reference.flatlaf-3.1.1.jar-1=librerias\\flatlaf-3.1.1.jar
 file.reference.flatlaf-extras-3.1.1.jar=C:\\Users\\gyaci\\Downloads\\flatlaf-extras-3.1.1.jar
 file.reference.flatlaf-extras-3.1.1.jar-1=librerias\\flatlaf-extras-3.1.1.jar
 file.reference.groovy-all-2.4.5.jar=Librerias para reportes\\groovy-all-2.4.5.jar
+file.reference.groovy-all-2.4.5.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\groovy-all-2.4.5.jar
 file.reference.gson-2.8.2.jar=C:\\Users\\50379\\Desktop\\gson-2.8.2.jar
 file.reference.gson-2.8.2.jar-1=librerias\\gson-2.8.2.jar
 file.reference.itext-pdfa-5.5.4.jar=Librerias para reportes\\itext-pdfa-5.5.4.jar
+file.reference.itext-pdfa-5.5.4.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\itext-pdfa-5.5.4.jar
 file.reference.itextpdf-5.5.4.jar=Librerias para reportes\\itextpdf-5.5.4.jar
+file.reference.itextpdf-5.5.4.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\itextpdf-5.5.4.jar
 file.reference.jasperreports-6.20.5.jar=Librerias para reportes\\jasperreports-6.20.5.jar
+file.reference.jasperreports-6.20.5.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\jasperreports-6.20.5.jar
 file.reference.javax.mail.jar=librerias\\javax.mail.jar
 file.reference.jfreechart-1.0.12.jar=Librerias para reportes\\jfreechart-1.0.12.jar
+file.reference.jfreechart-1.0.12.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\jfreechart-1.0.12.jar
 file.reference.jgoodies-binding-2.7.0-sources.jar=C:\\Users\\50379\\Desktop\\jgoodies-binding-2.7.0-sources.jar
 file.reference.jgoodies-looks-2.2.1.jar=C:\\Users\\50379\\Desktop\\jgoodies-looks-2.2.1.jar
 file.reference.junit-4.12.jar=Librerias para reportes\\junit-4.12.jar
+file.reference.junit-4.12.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\junit-4.12.jar
 file.reference.log4j-1.2.17.jar=Librerias para reportes\\log4j-1.2.17.jar
+file.reference.log4j-1.2.17.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\log4j-1.2.17.jar
 file.reference.lombok.jar=C:\\Users\\gyaci\\Downloads\\lombok.jar
 file.reference.lombok.jar-1=librerias\\lombok.jar
 file.reference.material-ui-swing-1.1.4.jar=C:\\Users\\50379\\Desktop\\material-ui-swing-1.1.4.jar
@@ -67,10 +80,15 @@ file.reference.miglayout-4.0.jar-1=librerias\\miglayout-4.0.jar
 file.reference.org.json.jar=C:\\Users\\gyaci\\Downloads\\org.json.jar
 file.reference.org.json.jar-1=librerias\\org.json.jar
 file.reference.poi-3.16.jar=Librerias para reportes\\poi-3.16.jar
+file.reference.poi-3.16.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\poi-3.16.jar
 file.reference.poi-excelant-3.16.jar=Librerias para reportes\\poi-excelant-3.16.jar
+file.reference.poi-excelant-3.16.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\poi-excelant-3.16.jar
 file.reference.poi-ooxml-3.16.jar=Librerias para reportes\\poi-ooxml-3.16.jar
+file.reference.poi-ooxml-3.16.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\poi-ooxml-3.16.jar
 file.reference.poi-ooxml-schemas-3.16.jar=Librerias para reportes\\poi-ooxml-schemas-3.16.jar
+file.reference.poi-ooxml-schemas-3.16.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\poi-ooxml-schemas-3.16.jar
 file.reference.poi-scratchpad-3.16.jar=Librerias para reportes\\poi-scratchpad-3.16.jar
+file.reference.poi-scratchpad-3.16.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\poi-scratchpad-3.16.jar
 file.reference.qrgen-1.2.jar=C:\\Users\\w0lf3\\Downloads\\qrgen-1.2.jar\\qrgen-1.2.jar
 file.reference.svgSalamander-1.1.4.jar=C:\\Users\\gyaci\\Downloads\\svgSalamander-1.1.4.jar
 file.reference.svgSalamander-1.1.4.jar-1=librerias\\svgSalamander-1.1.4.jar
@@ -80,6 +98,7 @@ file.reference.TimingFramework-0.55.jar=C:\\Users\\gyaci\\Downloads\\TimingFrame
 file.reference.TimingFramework-0.55.jar-1=librerias\\TimingFramework-0.55.jar
 file.reference.weblaf-ui-1.2.10.jar=C:\\Users\\50379\\Desktop\\weblaf-ui-1.2.10.jar
 file.reference.xmlbeans-2.6.0.jar=Librerias para reportes\\xmlbeans-2.6.0.jar
+file.reference.xmlbeans-2.6.0.jar-1=C:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\xmlbeans-2.6.0.jar
 file.reference.zxing-1.7-javase.jar=C:\\Users\\w0lf3\\Downloads\\zxing-1.7-javase.jar
 file.reference.zxing-core-2.0.jar=C:\\Users\\w0lf3\\Downloads\\zxing-core-2.0.jar
 includes=**
@@ -133,7 +152,26 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.16.jar}:\
     ${file.reference.poi-ooxml-schemas-3.16.jar}:\
     ${file.reference.poi-scratchpad-3.16.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.commons-beanutils-1.9.4.jar-1}:\
+    ${file.reference.commons-codec-1.10.jar-1}:\
+    ${file.reference.commons-collections4-4.1.jar-1}:\
+    ${file.reference.commons-digester-2.1.jar-1}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.groovy-all-2.4.5.jar-1}:\
+    ${file.reference.itext-pdfa-5.5.4.jar-1}:\
+    ${file.reference.itextpdf-5.5.4.jar-1}:\
+    ${file.reference.jasperreports-6.20.5.jar-1}:\
+    ${file.reference.jfreechart-1.0.12.jar-1}:\
+    ${file.reference.junit-4.12.jar-1}:\
+    ${file.reference.log4j-1.2.17.jar-1}:\
+    ${file.reference.poi-3.16.jar-1}:\
+    ${file.reference.poi-excelant-3.16.jar-1}:\
+    ${file.reference.poi-ooxml-3.16.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-3.16.jar-1}:\
+    ${file.reference.poi-scratchpad-3.16.jar-1}:\
+    ${file.reference.xmlbeans-2.6.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
