Correccion de modo claro en el dashboard, corrección de notificaciones a la hora de validad textfields, y modificaciones extras.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,24 @@ excludes=
 file.reference.AbsoluteLayout.jar=Librerias para reportes\\AbsoluteLayout.jar
 file.reference.AbsoluteLayout.jar-1=C\:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\AbsoluteLayout.jar
 file.reference.AbsoluteLayout.jar-2=C\:\\Users\\gyaci\\Desktop\\Expo\\AbsoluteLayout.jar
+file.reference.AbsoluteLayout.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\AbsoluteLayout.jar
+file.reference.commons-beanutils-1.9.4.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\commons-beanutils-1.9.4.jar
+file.reference.commons-codec-1.10.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\commons-codec-1.10.jar
+file.reference.commons-collections4-4.1.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\commons-collections4-4.1.jar
+file.reference.commons-digester-2.1.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\commons-digester-2.1.jar
+file.reference.commons-logging-1.2.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\commons-logging-1.2.jar
+file.reference.groovy-all-2.4.5.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\groovy-all-2.4.5.jar
+file.reference.itext-pdfa-5.5.4.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\itext-pdfa-5.5.4.jar
+file.reference.itextpdf-5.5.4.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\itextpdf-5.5.4.jar
+file.reference.jasperreports-6.20.5.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\jasperreports-6.20.5.jar
+file.reference.jfreechart-1.0.12.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\jfreechart-1.0.12.jar
+file.reference.junit-4.12.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\junit-4.12.jar
+file.reference.log4j-1.2.17.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\log4j-1.2.17.jar
+file.reference.poi-3.16.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\poi-3.16.jar
+file.reference.poi-excelant-3.16.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\poi-excelant-3.16.jar
+file.reference.poi-ooxml-3.16.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\poi-ooxml-3.16.jar
+file.reference.poi-ooxml-schemas-3.16.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\poi-ooxml-schemas-3.16.jar
+file.reference.poi-scratchpad-3.16.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\poi-scratchpad-3.16.jar
 file.reference.TimingFramework-0.55.jar=C\:\\Users\\gyaci\\Downloads\\TimingFramework-0.55.jar
 file.reference.TimingFramework-0.55.jar-1=librerias\\TimingFramework-0.55.jar
 file.reference.anima-0.1.1.jar=C\:\\Users\\50379\\Desktop\\anima-0.1.1.jar
@@ -109,13 +127,118 @@ file.reference.weblaf-ui-1.2.10.jar=C\:\\Users\\50379\\Desktop\\weblaf-ui-1.2.10
 file.reference.xmlbeans-2.6.0.jar=Librerias para reportes\\xmlbeans-2.6.0.jar
 file.reference.xmlbeans-2.6.0.jar-1=C\:\\Users\\w0lf3\\Downloads\\Librerias para reportes (3)\\Librerias para reportes\\xmlbeans-2.6.0.jar
 file.reference.xmlbeans-2.6.0.jar-2=C\:\\Users\\gyaci\\Desktop\\Expo\\xmlbeans-2.6.0.jar
+file.reference.xmlbeans-2.6.0.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\xmlbeans-2.6.0.jar
 file.reference.zxing-1.7-javase.jar=C\:\\Users\\w0lf3\\Downloads\\zxing-1.7-javase.jar
 file.reference.zxing-core-2.0.jar=C\:\\Users\\w0lf3\\Downloads\\zxing-core-2.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
-javac.classpath=${file.reference.lombok.jar}\:${file.reference.org.json.jar}\:${file.reference.flatlaf-extras-3.1.1.jar}\:${file.reference.flatlaf-3.1.1.jar}\:${file.reference.svgSalamander-1.1.4.jar}\:${file.reference.swing-toast-notifications-1.0.0.jar}\:${file.reference.TimingFramework-0.55.jar}\:${file.reference.miglayout-4.0.jar}\:${libs.absolutelayout.classpath}\:${file.reference.flatlaf-3.1.1.jar-1}\:${file.reference.flatlaf-extras-3.1.1.jar-1}\:${file.reference.lombok.jar-1}\:${file.reference.miglayout-4.0.jar-1}\:${file.reference.org.json.jar-1}\:${file.reference.svgSalamander-1.1.4.jar-1}\:${file.reference.TimingFramework-0.55.jar-1}\:${file.reference.gson-2.8.2.jar}\:${file.reference.gson-2.8.2.jar-1}\:${file.reference.javax.mail.jar}\:${file.reference.qrgen-1.2.jar}\:${file.reference.zxing-1.7-javase.jar}\:${file.reference.zxing-core-2.0.jar}\:${file.reference.jgoodies-binding-2.7.0-sources.jar}\:${file.reference.weblaf-ui-1.2.10.jar}\:${file.reference.jgoodies-looks-2.2.1.jar}\:${file.reference.material-ui-swing-1.1.4.jar}\:${file.reference.anima-0.1.1.jar}\:${file.reference.swing-toast-notifications-1.0.1.jar}\:${file.reference.AbsoluteLayout.jar}\:${file.reference.commons-beanutils-1.9.4.jar}\:${file.reference.commons-codec-1.10.jar}\:${file.reference.commons-collections4-4.1.jar}\:${file.reference.commons-digester-2.1.jar}\:${file.reference.commons-logging-1.2.jar}\:${file.reference.groovy-all-2.4.5.jar}\:${file.reference.itext-pdfa-5.5.4.jar}\:${file.reference.itextpdf-5.5.4.jar}\:${file.reference.jasperreports-6.20.5.jar}\:${file.reference.jfreechart-1.0.12.jar}\:${file.reference.junit-4.12.jar}\:${file.reference.log4j-1.2.17.jar}\:${file.reference.poi-3.16.jar}\:${file.reference.poi-excelant-3.16.jar}\:${file.reference.poi-ooxml-3.16.jar}\:${file.reference.poi-ooxml-schemas-3.16.jar}\:${file.reference.poi-scratchpad-3.16.jar}\:${file.reference.xmlbeans-2.6.0.jar}\:${file.reference.AbsoluteLayout.jar-1}\:${file.reference.commons-beanutils-1.9.4.jar-1}\:${file.reference.commons-codec-1.10.jar-1}\:${file.reference.commons-collections4-4.1.jar-1}\:${file.reference.commons-digester-2.1.jar-1}\:${file.reference.commons-logging-1.2.jar-1}\:${file.reference.groovy-all-2.4.5.jar-1}\:${file.reference.itext-pdfa-5.5.4.jar-1}\:${file.reference.itextpdf-5.5.4.jar-1}\:${file.reference.jasperreports-6.20.5.jar-1}\:${file.reference.jfreechart-1.0.12.jar-1}\:${file.reference.junit-4.12.jar-1}\:${file.reference.log4j-1.2.17.jar-1}\:${file.reference.poi-3.16.jar-1}\:${file.reference.poi-excelant-3.16.jar-1}\:${file.reference.poi-ooxml-3.16.jar-1}\:${file.reference.poi-ooxml-schemas-3.16.jar-1}\:${file.reference.poi-scratchpad-3.16.jar-1}\:${file.reference.xmlbeans-2.6.0.jar-1}\:${file.reference.AbsoluteLayout.jar-2}\:${file.reference.commons-beanutils-1.9.4.jar-2}\:${file.reference.commons-codec-1.10.jar-2}\:${file.reference.commons-collections4-4.1.jar-2}\:${file.reference.commons-digester-2.1.jar-2}\:${file.reference.commons-logging-1.2.jar-2}\:${file.reference.groovy-all-2.4.5.jar-2}\:${file.reference.itext-pdfa-5.5.4.jar-2}\:${file.reference.itextpdf-5.5.4.jar-2}\:${file.reference.jasperreports-6.20.5.jar-2}\:${file.reference.jfreechart-1.0.12.jar-2}\:${file.reference.junit-4.12.jar-2}\:${file.reference.log4j-1.2.17.jar-2}\:${file.reference.poi-3.16.jar-2}\:${file.reference.poi-excelant-3.16.jar-2}\:${file.reference.poi-ooxml-3.16.jar-2}\:${file.reference.poi-ooxml-schemas-3.16.jar-2}\:${file.reference.poi-scratchpad-3.16.jar-2}\:${file.reference.xmlbeans-2.6.0.jar-2}
+javac.classpath=\
+    ${file.reference.lombok.jar}:\
+    ${file.reference.org.json.jar}:\
+    ${file.reference.flatlaf-extras-3.1.1.jar}:\
+    ${file.reference.flatlaf-3.1.1.jar}:\
+    ${file.reference.svgSalamander-1.1.4.jar}:\
+    ${file.reference.swing-toast-notifications-1.0.0.jar}:\
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${file.reference.miglayout-4.0.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.flatlaf-3.1.1.jar-1}:\
+    ${file.reference.flatlaf-extras-3.1.1.jar-1}:\
+    ${file.reference.lombok.jar-1}:\
+    ${file.reference.miglayout-4.0.jar-1}:\
+    ${file.reference.org.json.jar-1}:\
+    ${file.reference.svgSalamander-1.1.4.jar-1}:\
+    ${file.reference.TimingFramework-0.55.jar-1}:\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.gson-2.8.2.jar-1}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.qrgen-1.2.jar}:\
+    ${file.reference.zxing-1.7-javase.jar}:\
+    ${file.reference.zxing-core-2.0.jar}:\
+    ${file.reference.jgoodies-binding-2.7.0-sources.jar}:\
+    ${file.reference.weblaf-ui-1.2.10.jar}:\
+    ${file.reference.jgoodies-looks-2.2.1.jar}:\
+    ${file.reference.material-ui-swing-1.1.4.jar}:\
+    ${file.reference.anima-0.1.1.jar}:\
+    ${file.reference.swing-toast-notifications-1.0.1.jar}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.groovy-all-2.4.5.jar}:\
+    ${file.reference.itext-pdfa-5.5.4.jar}:\
+    ${file.reference.itextpdf-5.5.4.jar}:\
+    ${file.reference.jasperreports-6.20.5.jar}:\
+    ${file.reference.jfreechart-1.0.12.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.poi-3.16.jar}:\
+    ${file.reference.poi-excelant-3.16.jar}:\
+    ${file.reference.poi-ooxml-3.16.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.16.jar}:\
+    ${file.reference.poi-scratchpad-3.16.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.commons-beanutils-1.9.4.jar-1}:\
+    ${file.reference.commons-codec-1.10.jar-1}:\
+    ${file.reference.commons-collections4-4.1.jar-1}:\
+    ${file.reference.commons-digester-2.1.jar-1}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.groovy-all-2.4.5.jar-1}:\
+    ${file.reference.itext-pdfa-5.5.4.jar-1}:\
+    ${file.reference.itextpdf-5.5.4.jar-1}:\
+    ${file.reference.jasperreports-6.20.5.jar-1}:\
+    ${file.reference.jfreechart-1.0.12.jar-1}:\
+    ${file.reference.junit-4.12.jar-1}:\
+    ${file.reference.log4j-1.2.17.jar-1}:\
+    ${file.reference.poi-3.16.jar-1}:\
+    ${file.reference.poi-excelant-3.16.jar-1}:\
+    ${file.reference.poi-ooxml-3.16.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-3.16.jar-1}:\
+    ${file.reference.poi-scratchpad-3.16.jar-1}:\
+    ${file.reference.xmlbeans-2.6.0.jar-1}:\
+    ${file.reference.AbsoluteLayout.jar-2}:\
+    ${file.reference.commons-beanutils-1.9.4.jar-2}:\
+    ${file.reference.commons-codec-1.10.jar-2}:\
+    ${file.reference.commons-collections4-4.1.jar-2}:\
+    ${file.reference.commons-digester-2.1.jar-2}:\
+    ${file.reference.commons-logging-1.2.jar-2}:\
+    ${file.reference.groovy-all-2.4.5.jar-2}:\
+    ${file.reference.itext-pdfa-5.5.4.jar-2}:\
+    ${file.reference.itextpdf-5.5.4.jar-2}:\
+    ${file.reference.jasperreports-6.20.5.jar-2}:\
+    ${file.reference.jfreechart-1.0.12.jar-2}:\
+    ${file.reference.junit-4.12.jar-2}:\
+    ${file.reference.log4j-1.2.17.jar-2}:\
+    ${file.reference.poi-3.16.jar-2}:\
+    ${file.reference.poi-excelant-3.16.jar-2}:\
+    ${file.reference.poi-ooxml-3.16.jar-2}:\
+    ${file.reference.poi-ooxml-schemas-3.16.jar-2}:\
+    ${file.reference.poi-scratchpad-3.16.jar-2}:\
+    ${file.reference.xmlbeans-2.6.0.jar-2}:\
+    ${file.reference.AbsoluteLayout.jar-3}:\
+    ${file.reference.commons-beanutils-1.9.4.jar-3}:\
+    ${file.reference.commons-codec-1.10.jar-3}:\
+    ${file.reference.commons-collections4-4.1.jar-3}:\
+    ${file.reference.commons-digester-2.1.jar-3}:\
+    ${file.reference.commons-logging-1.2.jar-3}:\
+    ${file.reference.groovy-all-2.4.5.jar-3}:\
+    ${file.reference.itext-pdfa-5.5.4.jar-3}:\
+    ${file.reference.itextpdf-5.5.4.jar-3}:\
+    ${file.reference.jasperreports-6.20.5.jar-3}:\
+    ${file.reference.jfreechart-1.0.12.jar-3}:\
+    ${file.reference.junit-4.12.jar-3}:\
+    ${file.reference.log4j-1.2.17.jar-3}:\
+    ${file.reference.poi-3.16.jar-3}:\
+    ${file.reference.poi-excelant-3.16.jar-3}:\
+    ${file.reference.poi-ooxml-3.16.jar-3}:\
+    ${file.reference.poi-ooxml-schemas-3.16.jar-3}:\
+    ${file.reference.poi-scratchpad-3.16.jar-3}:\
+    ${file.reference.xmlbeans-2.6.0.jar-3}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
