--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,6 +43,7 @@ file.reference.jasperreports-6.20.5.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\
 file.reference.jfreechart-1.0.12.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\jfreechart-1.0.12.jar
 file.reference.junit-4.12.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\junit-4.12.jar
 file.reference.log4j-1.2.17.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\log4j-1.2.17.jar
+file.reference.mssql-jdbc-12.2.0.jre11.jar=C:\\Users\\w0lf3\\OneDrive\\Escritorio\\mssql-jdbc-12.2.0.jre11.jar
 file.reference.poi-3.16.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\poi-3.16.jar
 file.reference.poi-excelant-3.16.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\poi-excelant-3.16.jar
 file.reference.poi-ooxml-3.16.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\poi-ooxml-3.16.jar
@@ -238,7 +239,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.16.jar-3}:\
     ${file.reference.poi-ooxml-schemas-3.16.jar-3}:\
     ${file.reference.poi-scratchpad-3.16.jar-3}:\
-    ${file.reference.xmlbeans-2.6.0.jar-3}
+    ${file.reference.xmlbeans-2.6.0.jar-3}:\
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
