--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,6 +49,7 @@ file.reference.poi-excelant-3.16.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\So
 file.reference.poi-ooxml-3.16.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\poi-ooxml-3.16.jar
 file.reference.poi-ooxml-schemas-3.16.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\poi-ooxml-schemas-3.16.jar
 file.reference.poi-scratchpad-3.16.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\poi-scratchpad-3.16.jar
+file.reference.qrgen-1.2.jar-1=C:\\Users\\gyaci\\Downloads\\qrgen-1.2.jar
 file.reference.TimingFramework-0.55.jar=C\:\\Users\\gyaci\\Downloads\\TimingFramework-0.55.jar
 file.reference.TimingFramework-0.55.jar-1=librerias\\TimingFramework-0.55.jar
 file.reference.anima-0.1.1.jar=C\:\\Users\\50379\\Desktop\\anima-0.1.1.jar
@@ -240,7 +241,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-schemas-3.16.jar-3}:\
     ${file.reference.poi-scratchpad-3.16.jar-3}:\
     ${file.reference.xmlbeans-2.6.0.jar-3}:\
-    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
+    ${file.reference.qrgen-1.2.jar-1}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
