Se añadió el sonido a las notificaciones, se corrigieron validaciones y extras.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.itext-pdfa-5.5.4.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Sof
 file.reference.itextpdf-5.5.4.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\itextpdf-5.5.4.jar
 file.reference.jasperreports-6.20.5.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\jasperreports-6.20.5.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Pc\\Desktop\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=librerias\\jcalendar-1.4.jar
 file.reference.jfreechart-1.0.12.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\jfreechart-1.0.12.jar
 file.reference.junit-4.12.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\junit-4.12.jar
 file.reference.log4j-1.2.17.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\log4j-1.2.17.jar
@@ -244,7 +245,8 @@ javac.classpath=\
     ${file.reference.xmlbeans-2.6.0.jar-3}:\
     ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
     ${file.reference.qrgen-1.2.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
