--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -252,7 +252,8 @@ javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
@@ -260,7 +261,8 @@ javac.test.classpath=\
     ${build.classes.dir}:\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}
-javac.test.modulepath=${javac.modulepath}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
@@ -296,12 +298,18 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
-run.classpath=${javac.classpath}\:${build.classes.dir}
+platform.active=JDK_17
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 run.jvmargs=
-run.modulepath=${javac.modulepath}
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
-run.test.modulepath=${javac.test.modulepath}
+run.modulepath=\
+    ${javac.modulepath}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
