--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -254,8 +254,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=20
+javac.target=20
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -298,7 +298,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_17
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
