--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,6 +46,7 @@ file.reference.jfreechart-1.0.12.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\So
 file.reference.junit-4.12.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\junit-4.12.jar
 file.reference.log4j-1.2.17.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\log4j-1.2.17.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=C:\\Users\\w0lf3\\OneDrive\\Escritorio\\mssql-jdbc-12.2.0.jre11.jar
+file.reference.mssql-jdbc-12.2.0.jre11.jar-1=C:\\Users\\w0lf3\\OneDrive\\Escritorio\\LIB\\mssql-jdbc-12.2.0.jre11.jar
 file.reference.poi-3.16.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\poi-3.16.jar
 file.reference.poi-excelant-3.16.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\poi-excelant-3.16.jar
 file.reference.poi-ooxml-3.16.jar-3=E:\\cosas del rical\\Segundo a\u00f1o\\Software\\Expo\\EXPO ESCRITORIO\\ExpoEscritorio\\Librerias para reportes\\poi-ooxml-3.16.jar
@@ -246,7 +247,8 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
     ${file.reference.qrgen-1.2.jar-1}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar-1}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
