--- a/src/View/theme/FlatLaf.properties
+++ b/src/View/theme/FlatLaf.properties
@@ -1,8 +1,8 @@
 @accentColor=$App.accent.default
 
-defaultFont=13 Alkatra
+defaultFont=13 Chivo
 
-h1.font=bold +12
+h1.font=Chivo +12
 
 Component.focusWidth=1
 Button.acr=10
