--- a/src/View/theme/FlatDarkLaf.properties
+++ b/src/View/theme/FlatDarkLaf.properties
@@ -1,5 +1,5 @@
 
-@background=rgb(49,62,74)
+@background=rgb(24, 43, 61)
 @foreground=rgb(240,240,240)
 
 Menu.background=darken(@background,10%)
@@ -21,10 +21,10 @@ Login.background=lighten(@background,5%)
 Toast.useEffect = false
 
 # Accent Color
-App.accent.default = #4B6EAF
-App.accent.blue = #0A84FF
-App.accent.purple = #BF5AF2
-App.accent.red = #FF453A
-App.accent.orange = #FF9F0A
+App.accent.default = #069c97
+App.accent.blue = #06109c
+App.accent.purple = #9c0685
+App.accent.red = #f70546
+App.accent.orange = #f75205
 App.accent.yellow = #FFCC00
-App.accent.green = #32D74B
+App.accent.green = #e3987f
