cambios en el modo claro

--- a/src/View/theme/FlatLightLaf.properties
+++ b/src/View/theme/FlatLightLaf.properties
@@ -2,7 +2,7 @@
 @foreground=rgb(60,60,60)
 @background=rgb(245,243,243)
 
-Menu.background=rgb(245, 251, 255)
+Menu.background=@accentColor
 Menu.foreground=rgb(38,38,38)
 Menu.lineColor=darken($Menu.foreground,25%)
 Menu.arrowColor=darken($Menu.foreground,5%)
@@ -23,10 +23,10 @@ Login.background=darken(@background,5%)
 
 
 # Accent Color
-App.accent.default = #2675BF
-App.accent.blue = #007AFF
-App.accent.purple = #BF5AF2
-App.accent.red = #FF3B30
-App.accent.orange = #FF9500
+App.accent.default = #069c97
+App.accent.blue = #06109c
+App.accent.purple = #9c0685
+App.accent.red = #f70546
+App.accent.orange = #f75205
 App.accent.yellow = #FFCC00
-App.accent.green = #28CD41
+App.accent.green = #e3987f
