--- a/src/View/theme/FlatLightLaf.properties
+++ b/src/View/theme/FlatLightLaf.properties
@@ -2,7 +2,7 @@
 @foreground=rgb(60,60,60)
 @background=rgb(250,250,250)
 
-Menu.background=@accentColor
+Menu.background=lighten(@background,10%)
 Menu.foreground=rgb(38,38,38)
 Menu.lineColor=darken($Menu.foreground,25%)
 Menu.arrowColor=darken($Menu.foreground,5%)
@@ -10,7 +10,7 @@ Menu.lightdark.background=darken($Menu.background,5%)
 Menu.lightdark.button.background=shade($Menu.lightdark.background,20%)
 Menu.title.foreground=darken($Menu.foreground,25%)
 Menu.button.background=darken(@background,10%)
-Menu.button.selectedBackground=darken($Menu.background,5%)
+Menu.button.selectedBackground=lighten(@accentColor,10%)
 Menu.button.selectedForeground=$Menu.foreground
 
 Menu.ScrollBar.background=$Menu.background
