--- a/src/View/theme/FlatDarkLaf.properties
+++ b/src/View/theme/FlatDarkLaf.properties
@@ -21,10 +21,10 @@ Login.background=lighten(@background,5%)
 Toast.useEffect = false
 
 # Accent Color
-App.accent.default = #069c97
-App.accent.blue = #06109c
-App.accent.purple = #9c0685
-App.accent.red = #f70546
-App.accent.orange = #f75205
-App.accent.yellow = #FFCC00
-App.accent.green = #e3987f
+App.accent.default = #000080
+App.accent.blue = #404040
+App.accent.purple = #C0C0C0
+App.accent.red = #FFD700
+App.accent.orange = #008000
+App.accent.yellow = #800000
+App.accent.green = #E0E0E0
