--- a/src/View/theme/FlatLightLaf.properties
+++ b/src/View/theme/FlatLightLaf.properties
@@ -23,10 +23,13 @@ Login.background=darken(@background,5%)
 
 
 # Accent Color
-App.accent.default = #069c97
-App.accent.blue = #06109c
-App.accent.purple = #9c0685
-App.accent.red = #f70546
-App.accent.orange = #f75205
-App.accent.yellow = #FFCC00
-App.accent.green = #e3987f
+App.accent.default = #B0E0E6
+App.accent.blue = #FFDAB9
+App.accent.purple = #C0D9D9
+App.accent.red = #FFA07A
+App.accent.orange = #32CD32
+App.accent.yellow = #FF69B4
+App.accent.green = #FFA500
+
+
+
