--- a/src/View/theme/FlatDarkLaf.properties
+++ b/src/View/theme/FlatDarkLaf.properties
@@ -21,10 +21,10 @@ Login.background=lighten(@background,5%)
 Toast.useEffect = false
 
 # Accent Color
-App.accent.default = #000080
-App.accent.blue = #404040
-App.accent.purple = #C0C0C0
-App.accent.red = #FFD700
-App.accent.orange = #008000
-App.accent.yellow = #800000
-App.accent.green = #E0E0E0
+App.accent.default = #B0E0E6
+App.accent.blue = #FFDAB9
+App.accent.purple = #C0D9D9
+App.accent.red = #FFA07A
+App.accent.orange = #32CD32
+App.accent.yellow = #FF69B4
+App.accent.green = #FFA500
