--- a/src/View/theme/FlatLightLaf.properties
+++ b/src/View/theme/FlatLightLaf.properties
@@ -10,7 +10,7 @@ Menu.lightdark.background=darken($Menu.background,5%)
 Menu.lightdark.button.background=shade($Menu.lightdark.background,20%)
 Menu.title.foreground=darken($Menu.foreground,25%)
 Menu.button.background=darken(@background,10%)
-Menu.button.selectedBackground=lighten($Menu.background,5%)
+Menu.button.selectedBackground=lighten(@accentColor,10%)
 Menu.button.selectedForeground=$Menu.foreground
 
 Menu.ScrollBar.background=$Menu.background
