--- a/src/View/theme/FlatLaf.properties
+++ b/src/View/theme/FlatLaf.properties
@@ -25,7 +25,7 @@ Popup.dropShadowInsets = 2,5,8,8
 Toast.background=lighten(@background,5%)
 
 Toast.outlineWidth = 1
-Toast.warning.outlineColor = $App.accent.orange
+Toast.warning.outlineColor = $App.accent.green
 Toast.frameInsets = 20,20,20,20
 Toast.arc = 30
 Toast.shadowOpacity = 0f
